Compile Assets in Production Mode

--- a/app/views/layouts/test.html.erb
+++ b/app/views/layouts/test.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Welcome</title>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 <body>
 <%= yield %>
